--- a/app/src/main/res/layout/activity_introduction.xml
+++ b/app/src/main/res/layout/activity_introduction.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".IntroductionActivity">
+    tools:context=".activites.IntroductionActivity">
 
     <TextView
         android:id="@+id/tv_app_name_intro"
