--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-tools:context=".SignUpActivity">
+tools:context=".activites.SignUpActivity">
 
 <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar_sign_up_activity"
