--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,8 +30,12 @@
     <dimen name="et_text_size">16sp</dimen>
     <dimen name="authentication_screen_til_marginTop">20dp</dimen>
 
-    <!--TODO (Step 5: Add all the dimen values here.)-->
-    <!--START-->
     <dimen name="authentication_screen_marginTop">60dp</dimen>
-    <!--END-->
+
+
+    <dimen name="progress_dialog_content_padding">10dp</dimen>
+    <dimen name="progress_bar_size">50dp</dimen>
+    <dimen name="progress_text_marginStart">16dp</dimen>
+    <dimen name="progress_text_size">16sp</dimen>
+
 </resources>
